--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,5 @@
 NODIT_API_KEY=your_nodit_key
 EMAIL_USER=your_email
 EMAIL_PASS=your_email_password
+SENDGRID_API_KEY=your_sendgrid_api_key
+ALERT_PHONE=+1234567890
