--- a/backend/package.json
+++ b/backend/package.json
@@ -15,8 +15,11 @@
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "fs": "^0.0.1-security",
     "node-cache": "^5.1.2",
     "nodemailer": "^7.0.3",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "path": "^0.12.7",
+    "sqlite3": "^5.1.7"
   }
 }
