--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,13 @@
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "dotenv": "^16.5.0",
+    "fs": "^0.0.1-security",
     "next": "^15.3.2",
+    "path": "^0.12.7",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
+    "sqlite3": "^5.1.7",
     "styled-components": "^6.1.18"
   }
 }
