--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,6 @@
 NODIT_API_KEY=your_nodit_key
 EMAIL_USER=your_email
 EMAIL_PASS=your_email_password
+ZAPIER_TELEGRAM_WEBHOOK_ID=your_zapier_id
+ZAPIER_SMS_WEBHOOK_ID=your_zapier_id
+APTOS_STREAM_KEY=your_nodit_stream_key
