--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,3 +3,4 @@ EMAIL_USER=your_email
 EMAIL_PASS=your_email_password
 SENDGRID_API_KEY=your_sendgrid_api_key
 ALERT_PHONE=+1234567890
+GROQ_API_KEY = 
