--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "fs": "^0.0.1-security",
+    "groq-sdk": "^0.25.0",
     "node-cache": "^5.1.2",
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
