--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,8 @@
 NODIT_API_KEY=your_nodit_key
 EMAIL_USER=your_email
-EMAIL_PASS=your_email_password
-SENDGRID_API_KEY=your_sendgrid_api_key
 ALERT_PHONE=+1234567890
 GROQ_API_KEY = 
 PORT=3002
+TELEGRAM_BOT_TOKEN=
+ZAPIER_WEBHOOK_ID=
+COINMARKETCAP_API_KEY=
