--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,3 +4,12 @@ PORT=3002
 TELEGRAM_BOT_TOKEN=
 ZAPIER_WEBHOOK_ID=
 COINMARKETCAP_API_KEY=
+ETH_RPC_URL=https://1rpc.io/eth
+ETH_PRIVATE_KEY=your_eth_private_key
+ETHERSCAN_API_KEY=your_etherscan_key
+TRON_FULL_NODE=https://api.trongrid.io
+TRON_PRIVATE_KEY=your_tron_private_key
+XRPL_NODE=wss://xrplcluster.com
+BITQUERY_API_KEY=your_bitquery_api_key
+QUICKNODE_URL=https://your-quicknode-url.com
+ALCHEMY_API_KEY=your_alchemy_api_key
