--- a/backend/.env.example
+++ b/backend/.env.example
@@ -13,3 +13,4 @@ XRPL_NODE=wss://xrplcluster.com
 BITQUERY_API_KEY=your_bitquery_api_key
 QUICKNODE_URL=https://your-quicknode-url.com
 ALCHEMY_API_KEY=your_alchemy_api_key
+JWT_SECRET=your_strong_secret_here
