--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,14 @@
   "description": "",
   "dependencies": {
     "axios": "^1.10.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "ethers": "^6.15.0",
     "express": "^5.1.0",
     "fs": "^0.0.1-security",
     "groq-sdk": "^0.25.0",
+    "jsonwebtoken": "^9.0.2",
     "mailgun-js": "^0.22.0",
     "node-cache": "^5.1.2",
     "node-fetch": "^3.3.2",
