--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-sns": "^3.828.0",
+    "@babel/runtime": "^7.27.6",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "dotenv": "^16.5.0",
@@ -24,8 +25,12 @@
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.7.0",
     "react-tooltip": "^5.29.1",
     "sqlite3": "^5.1.7",
-    "styled-components": "^6.1.18"
+    "styled-components": "^6.1.19"
+  },
+  "devDependencies": {
+    "babel-plugin-styled-components": "^2.1.4"
   }
 }
