--- a/backend/.env.example
+++ b/backend/.env.example
@@ -14,3 +14,5 @@ BITQUERY_API_KEY=your_bitquery_api_key
 QUICKNODE_URL=https://your-quicknode-url.com
 ALCHEMY_API_KEY=your_alchemy_api_key
 JWT_SECRET=your_strong_secret_here
+NODIT_API_BASE_URL=https://web3.nodit.io/v1/
+MONGO_URI=
