--- a/backend/package.json
+++ b/backend/package.json
@@ -15,13 +15,13 @@
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
     "ethers": "^6.15.0",
     "express": "^5.1.0",
     "fs": "^0.0.1-security",
     "groq-sdk": "^0.25.0",
     "jsonwebtoken": "^9.0.2",
     "mailgun-js": "^0.22.0",
+    "mongoose": "^8.16.4",
     "node-cache": "^5.1.2",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.3",
@@ -34,5 +34,10 @@
   },
   "engines": {
     "node": ">=18.x"
+  },
+  "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^6.1.0",
+    "dotenv": "^17.2.0",
+    "hardhat": "^2.26.1"
   }
 }
