--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,9 @@
   "dependencies": {
     "@aws-sdk/client-sns": "^3.828.0",
     "@babel/runtime": "^7.27.6",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "dotenv": "^16.5.0",
