--- a/backend/package.json
+++ b/backend/package.json
@@ -38,6 +38,8 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^6.1.0",
     "dotenv": "^17.2.0",
-    "hardhat": "^2.26.1"
+    "hardhat": "^2.26.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
